--- a/src/Odjemalec/hardware-haven/src/App.css
+++ b/src/Odjemalec/hardware-haven/src/App.css
@@ -28,11 +28,18 @@ header, .bg-theme {
   @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50;
 }
 
+.form-button-neutral {
+  @apply bg-gray-500/20 hover:bg-gray-700/20 text-gray-700 font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-gray-500/20 focus:ring-opacity-50;
+}
+
+.form-button-danger {
+  @apply bg-rose-500 hover:bg-rose-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-rose-500 focus:ring-opacity-50;
+}
+
 .message {
   @apply mt-4 text-center;
 }
 
 .centered-container {
   @apply flex items-center justify-center min-h-screen bg-gray-100;
-  margin-bottom: 40vh; /* Adjust this value as needed to move the form higher */
 }
